--- a/templates/index.html
+++ b/templates/index.html
@@ -40,46 +40,9 @@
         </button>
     </div>
 </section>
-
 <section class="section bg-white">
-    <div class="container text-center">
-        <h2 class="text-9 fw-500">Все отели</h2>
-        <div class="row">
-            {{ hotels|length }}
-            {% for hotel in hotels %}
-            <div class="col-md-4">
-                <div class="card mb-4 h-100">
-                    <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
-                        <div class="image-container">
-                            {% if hotel.hotel_image %}
-                            <img class="card-img-top img-fluid rounded-4" src="{{ hotel.hotel_image.url }}"
-                                alt="фото отеля">
-                            {% else %}
-                            <img class="card-img-top img-fluid"
-                                src="https://services.meteored.com/img/article/como-podemos-distinguir-los-planetas-de-las-estrellas-1679732078853_1024.jpeg"
-                                alt="фото планеты">
-                            {% endif %}
-                            <div class="image-flash-top-left">
-                                <p class="Город">{{ hotel.city.city_name }}</p>
-                            </div>
-                        </div>
-                        <a href="{% url 'hotel_detail' hotel.slug %}" class="post-link">
-                            <h4 class="card-title text-center">{{ hotel.hotel_name }}</h4>
-                            <p class="card-text text-center">{{ hotel.description_hotel }}</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</section>
-
-
-<section class="section bg-white">
-    <div class="container text-center">
-        <h2 class="text-9 fw-500">Offers</h2>
-        <p class="lead">Promotions, deals and special offers for you</p>
+    <div class="container text-center mt-5">
+        <h2 class="text-9 fw-500">Special Offers: Promotions, Discounts, and Exclusive Deals Await You</h2>
         <div class="row">
             <div class="col-12 mt-3 left">
                 <div class="row">
@@ -118,6 +81,38 @@
                     {% endif %}
                     {% endfor %}
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="section bg-white">
+    <div class="container text-center  mb-5 mt-5">
+        <h2 class="text-9 fw-500">Best Hotels: High Ratings and Guest Preference</h2>
+        <div class="row">
+            {% for hotel in hotels %}
+            <div class="col-md-4">
+                <div class="card mb-4 h-100">
+                    <div class="card-body d-flex flex-column shadow mt-3 mb-3 rounded-4">
+                        <div class="image-container">
+                            {% if hotel.hotel_image %}
+                            <img class="card-img-top img-fluid rounded-4" src="{{ hotel.hotel_image.url }}"
+                                alt="фото отеля">
+                            {% else %}
+                            <img class="card-img-top img-fluid"
+                                src="https://services.meteored.com/img/article/como-podemos-distinguir-los-planetas-de-las-estrellas-1679732078853_1024.jpeg"
+                                alt="фото планеты">
+                            {% endif %}
+                            <div class="image-flash-top-left">
+                                <p class="city">{{ hotel.city.city_name }}</p>
+                            </div>
+                        </div>
+                        <a href="{% url 'hotel_detail' hotel.slug %}" class="post-link">
+                            <h4 class="card-title text-center">{{ hotel.hotel_name }}</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
