--- a/static/css/style.css
+++ b/static/css/style.css
@@ -224,6 +224,12 @@ body {
     display: flex;
     gap: 10px;
     justify-content: flex-start;
-    
+}
 
+button.btn-primary {
+    width: 100%;
+    height: 62.41px;
+    line-height: 62.41px;
+    font-size: 16px;
+    padding: 0;
 }
