--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,56 @@
         </button>
     </div>
 </section>
+<!-- --------Search bar-------- -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col position-relative">
+                <form method="post" action="{% url 'search' %}" class="card shadow rounded-3 position-relative p-1 bg-warning">
+                    {% csrf_token %}
+                    <div class="row align-items-center">
+                        <div class="col-lg-3">
+                            <div class="form-group d-flex">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="bi bi-geo-alt fs-3 mt-2"></i></span>
+                                    <label for="city" class="form-label sr-only">City</label>
+                                    <select class="form-select" id="city" name="city">
+                                        {% for city in cities %}
+                                            <option value="{{ city.id }}">{{ city.city_name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="form-group d-flex">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="bi bi-calendar fs-3 mt-2"></i></span>
+                                    <label for="checkin" class="form-label sr-only">Check-In Date</label>
+                                    <input type="date" class="form-control" id="checkin" name="checkin">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="form-group d-flex">
+                                <div class="input-group">
+                                    <span class="input-group-text"><i class="bi bi-calendar-check fs-3 mt-2"></i></span>
+                                    <label for="checkout" class="form-label sr-only">Check-Out Date</label>
+                                    <input type="date" class="form-control" id="checkout" name="checkout">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <button type="submit" class="btn btn-primary btn-block">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <section class="section bg-white">
     <div class="container text-center mt-5">
         <h2 class="text-9 fw-500">Special Offers: Promotions, Discounts, and Exclusive Deals Await You</h2>
