--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -37,7 +37,6 @@
                                     {% if not booking.is_cancelled %}
                                     <a href="{% url 'edit_booking' booking.id %}" class="btn btn-primary">Edit
                                         Booking</a>
-                                    <!-- Добавил data-bs-toggle и data-bs-target -->
                                     <button class="btn btn-danger cancel-booking-button" data-bs-toggle="modal"
                                         data-bs-target="#confirmModal{{ booking.id }}">Cancel Booking</button>
                                     {% else %}
@@ -74,9 +73,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Confirm Cancellation of Booking</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Закрыть">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>Are you sure you want to cancel this booking?</p>
