--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,7 +226,7 @@ body {
     justify-content: flex-start;
 }
 
-button.btn-primary {
+.btn-block {
     width: 100%;
     height: 62.41px;
     line-height: 62.41px;
