--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -1,91 +1,116 @@
 {% extends 'base.html' %} {% block content %} {% load crispy_forms_tags %}
 
-<div class="masthead">
-  <div class="container">
-    <div class="row g-0">
-      <div class="col-md-6 masthead-text">
-        <h1 class="post-title">{{ room.room_name }}</h1>
-      </div>
-      <div class="d-none d-md-block col-md-6 masthead-image">
-        {% if "placeholder" in room.room_image.url %}
-        <img
-          src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg"
-          width="100%"
-        />
-        {% else %}
-        <img src="{{ room.room_image.url }}" width="100%" />
-        {% endif %}
-      </div>
-    </div>
-  </div>
-</div>
 <div class="container">
   <div class="row">
-    <div class="col card mb-4 mt-3 left top">
-      <div class="card-body">
-        <p class="card-text">{{ room.description_room | safe }}</p>
-        <div class="row">
-          <div class="col-1">
-            <strong class="text-secondary"
-              ><i class="far fa-heart"></i> {{ room.number_of_likes }}
-            </strong>
+      <div class="col-md-4">
+          <div class="card bg-warning mb-3 mt-3">
+              <div class="card-body">
+                  <h5 class="card-title">Search</h5>
+                  <form method="post" action="{% url 'search' %}">
+                      {% csrf_token %}
+                      <div class="mb-3">
+                          <label for="city" class="form-label">City</label>
+                          <select class="form-select" id="city" name="city">
+                              {% for city in cities %}
+                              <option value="{{ city.id }}">{{ city.city_name }}</option>
+                              {% endfor %}
+                          </select>
+                      </div>
+                      <div class="mb-3">
+                      </div>
+                      <div class="mb-3">
+                          <label for="checkin" class="form-label">Check-In Date</label>
+                          <input type="date" class="form-control" id="checkin" name="checkin">
+                      </div>
+                      <div class="mb-3">
+                          <label for="checkout" class="form-label">Check-Out Date</label>
+                          <input type="date" class="form-control" id="checkout" name="checkout">
+                      </div>
+                      <button type="submit" class="btn btn-primary">Search</button>
+                  </form>
+              </div>
           </div>
-          <div class="col-1">
-            {% with Guest_reviews.count as total_reviews %}
-            <strong class="text-secondary"
-              ><i class="far fa-comments"></i>
-              {{ total_reviews }}
-            </strong>
-
-            {% endwith %}
+      </div>
+      <div class="col-md-8">
+          <div class="row">
+              <div class="col-12 mt-3 mb-3">
+                  <h3 class="post-title">{{ hotel.hotel_name }}</h3>
+                  <h2 class="post-title">{{ room.room_name }}</h2>
+                  <img src="{{ room.room_image.url }}" alt="{{ room.room_image.url }}" class="img-fluid">
+              </div>
           </div>
+      </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col card mb-4 mt-3 left top">
+        <div class="card-body">
+          <p class="card-text">{{ room.description_room | safe }}</p>
+          <div class="row">
+            <div class="col-1">
+              <strong class="text-secondary"
+                ><i class="far fa-heart"></i> {{ room.number_of_likes }}
+              </strong>
+            </div>
+            <div class="col-1">
+              {% with Guest_reviews.count as total_reviews %}
+              <strong class="text-secondary"
+                ><i class="far fa-comments"></i>
+                {{ total_reviews }}
+              </strong>
+  
+              {% endwith %}
+            </div>
+          </div>
+          <a href="{% url 'book_room' room.slug %}" class="btn btn-primary"
+            >Booking now</a
+          >
         </div>
-        <a href="{% url 'book_room' room.slug %}" class="btn btn-primary"
-          >Booking now</a
-        >
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <hr />
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 card mb-4 mt-3">
+        <h3>Reviews:</h3>
+        <div class="card-body">
+          {% for review in reviews %}
+          <div class="comments" style="padding: 10px">
+            <p class="font-weight-bold">
+              {{ review.name }}
+              <span class="text-muted font-weight-normal">
+                {{ review.created_on }} wrote:
+              </span>
+            </p>
+            {{ review.body | linebreaks }}
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+      <div class="col-md-4 card mb-4 mt-3">
+        <div class="card-body">
+          {% if commented %}
+          <div class="alert alert-success" role="alert">
+            Your review is awaiting approval
+          </div>
+          {% else %} {% if user.is_authenticated %}
+  
+          <h3>Leave a review:</h3>
+          <p>Posting as: {{ user.username }}</p>
+          <form method="post" style="margin-top: 1.3em">
+            {{ reviews_form | crispy }} {% csrf_token %}
+            <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+          </form>
+          {% endif %} {% endif %}
+        </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
-      <hr />
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 card mb-4 mt-3">
-      <h3>Reviews:</h3>
-      <div class="card-body">
-        {% for review in reviews %}
-        <div class="comments" style="padding: 10px">
-          <p class="font-weight-bold">
-            {{ review.name }}
-            <span class="text-muted font-weight-normal">
-              {{ review.created_on }} wrote:
-            </span>
-          </p>
-          {{ review.body | linebreaks }}
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-    <div class="col-md-4 card mb-4 mt-3">
-      <div class="card-body">
-        {% if commented %}
-        <div class="alert alert-success" role="alert">
-          Your review is awaiting approval
-        </div>
-        {% else %} {% if user.is_authenticated %}
 
-        <h3>Leave a review:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form method="post" style="margin-top: 1.3em">
-          {{ reviews_form | crispy }} {% csrf_token %}
-          <button type="submit" class="btn btn-signup btn-lg">Submit</button>
-        </form>
-        {% endif %} {% endif %}
-      </div>
-    </div>
-  </div>
-</div>
+<!-- -------------------------------- -->
 
 {% endblock content %}
+
