--- a/templates/city_hotels.html
+++ b/templates/city_hotels.html
@@ -36,8 +36,10 @@
             {% for hotel in hotels %}
             <div class="property-card card shadow mb-4 rounded-4">
                 <div class="row property-card-container">
-                    <div class="col-md-3 rounded-4">
-                        <img src="{{ hotel.hotel_image.url }}" alt="{{ hotel.hotel_name }}" class="img-fluid">
+                    <div class="col-md-3">
+                        <div class="d-flex m-1" style="height: 100%;">
+                            <img src="{{ hotel.hotel_image.url }}" alt="{{ hotel.hotel_name }}" class="img-fluid rounded-4" style="height: 75%; width: 100%; object-fit: cover;">
+                        </div>
                     </div>
                     <div class="col-md-9">
                         <div class="property-details">
@@ -48,10 +50,10 @@
                                     {{ hotel.description_hotel | safe | truncatewords_html:70}}
                                 </p>
                             </div>
-                            <div class="property-action">
-                                <button type="button">
-                                    <span>Show rooms and prices</span>
-                                </button>
+                            <div class="property-action d-flex justify-content-end m-2">
+                                <a href="{% url 'hotel_detail' hotel.slug %}"class="btn btn-primary">
+                                    <span>Show rooms and prices > </span>
+                                </a>
                             </div>
                         </div>
                     </div>
