--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -2,44 +2,42 @@
 
 <div class="container">
   <div class="row">
-      <div class="col-md-4">
-          <div class="card bg-warning mb-3 mt-3">
-              <div class="card-body">
-                  <h5 class="card-title">Search</h5>
-                  <form method="post" action="{% url 'search' %}">
-                      {% csrf_token %}
-                      <div class="mb-3">
-                          <label for="city" class="form-label">City</label>
-                          <select class="form-select" id="city" name="city">
-                              {% for city in cities %}
-                              <option value="{{ city.id }}">{{ city.city_name }}</option>
-                              {% endfor %}
-                          </select>
-                      </div>
-                      <div class="mb-3">
-                      </div>
-                      <div class="mb-3">
-                          <label for="checkin" class="form-label">Check-In Date</label>
-                          <input type="date" class="form-control" id="checkin" name="checkin">
-                      </div>
-                      <div class="mb-3">
-                          <label for="checkout" class="form-label">Check-Out Date</label>
-                          <input type="date" class="form-control" id="checkout" name="checkout">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Search</button>
-                  </form>
-              </div>
-          </div>
+    <div class="col-md-4">
+      <div class="card bg-warning mb-3 mt-3">
+        <div class="card-body">
+          <h5 class="card-title">Search</h5>
+          <form method="post" action="{% url 'search' %}">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="city" class="form-label">City</label>
+              <select class="form-select" id="city" name="city">
+                {% for city in cities %}
+                <option value="{{ city.id }}">{{ city.city_name }}</option>
+                {% endfor %}
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="checkin" class="form-label">Check-In Date</label>
+              <input type="date" class="form-control" id="checkin" name="checkin">
+            </div>
+            <div class="mb-3">
+              <label for="checkout" class="form-label">Check-Out Date</label>
+              <input type="date" class="form-control" id="checkout" name="checkout">
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+          </form>
+        </div>
       </div>
-      <div class="col-md-8">
-          <div class="row">
-              <div class="col-12 mt-3 mb-3">
-                  <h3 class="post-title">{{ hotel.hotel_name }}</h3>
-                  <h2 class="post-title">{{ room.room_name }}</h2>
-                  <img src="{{ room.room_image.url }}" alt="{{ room.room_image.url }}" class="img-fluid">
-              </div>
-          </div>
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-12 mt-3 mb-3">
+          <h3 class="post-title">{{ hotel.hotel_name }}</h3>
+          <h2 class="post-title">{{ room.room_name }}</h2>
+          <img src="{{ room.room_image.url }}" alt="{{ room.room_image.url }}" class="img-fluid">
+        </div>
       </div>
+    </div>
   </div>
   <div class="container">
     <div class="row">
@@ -48,47 +46,40 @@
           <p class="card-text">{{ room.description_room | safe }}</p>
           <div class="row">
             <div class="col-1">
-              <strong class="text-secondary"
-                ><i class="far fa-heart"></i> {{ room.number_of_likes }}
+              <strong class="text-secondary"><i class="far fa-heart"></i> {{ room.number_of_likes }}
               </strong>
             </div>
             <div class="col-1">
               {% with Guest_reviews.count as total_reviews %}
-              <strong class="text-secondary"
-                ><i class="far fa-comments"></i>
+              <strong class="text-secondary"><i class="far fa-comments"></i>
                 {{ total_reviews }}
               </strong>
-  
               {% endwith %}
             </div>
           </div>
           <a href="{% url 'book_room' room.slug %}" class="btn btn-primary"
-            >Booking now</a
-          >
-        </div>
+          {% if not user.is_authenticated %}
+          data-bs-toggle="modal" data-bs-target="#loginModal"{% endif %}>Booking now</a>
       </div>
     </div>
-    <div class="row">
-      <div class="col">
-        <hr />
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8 card mb-4 mt-3">
-        <h3>Reviews:</h3>
-        <div class="card-body">
-          {% for review in reviews %}
-          <div class="comments" style="padding: 10px">
-            <p class="font-weight-bold">
-              {{ review.name }}
-              <span class="text-muted font-weight-normal">
-                {{ review.created_on }} wrote:
-              </span>
-            </p>
-            {{ review.body | linebreaks }}
-          </div>
-          {% endfor %}
+    <div class="col-md-8 card mb-4 mt-3">
+      <h3>Reviews:</h3>
+      <div class="card-body">
+        {% if reviews %}
+        {% for review in reviews %}
+        <div class="comments" style="padding: 10px">
+          <p class="font-weight-bold">
+            {{ review.name }}
+            <span class="text-muted font-weight-normal">
+              {{ review.created_on }} wrote:
+            </span>
+          </p>
+          {{ review.body | linebreaks }}
         </div>
+        {% endfor %}
+        {% else %}
+        <p>No reviews yet.</p>
+        {% endif %}
       </div>
       <div class="col-md-4 card mb-4 mt-3">
         <div class="card-body">
@@ -96,21 +87,39 @@
           <div class="alert alert-success" role="alert">
             Your review is awaiting approval
           </div>
-          {% else %} {% if user.is_authenticated %}
-  
+          {% else %}
+          {% if user.is_authenticated %}
           <h3>Leave a review:</h3>
           <p>Posting as: {{ user.username }}</p>
           <form method="post" style="margin-top: 1.3em">
             {{ reviews_form | crispy }} {% csrf_token %}
             <button type="submit" class="btn btn-signup btn-lg">Submit</button>
           </form>
-          {% endif %} {% endif %}
+          {% endif %}
+          {% endif %}
         </div>
       </div>
     </div>
   </div>
-
+</div>
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login Required</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p class="text-danger">To book a room, you need to <a href="{% url 'account_login' %}">login</a>.
+          <br>
+          Not registered yet? <a href="{% url 'account_signup' %}">Register here</a>.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- -------------------------------- -->
 
 {% endblock content %}
-
